--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "tiktokdl": "^0.0.5",
     "tinyurl": "^1.1.7",
     "translate-google": "^1.5.0",
-    "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.5"
+    "yt-search": "^2.10.3"
   }
 }
