--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.0", 
+    "axios": "^1.6.0",
     "bitly": "^7.1.2",
     "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.11",
@@ -39,19 +39,19 @@
     "is-number": "^7.0.0",
     "is-url": "^1.2.4",
     "isotope-layout": "^3.0.6",
-    "jimp": "^0.22.10",
+    "jimp": "^0.16.1",
     "jquery": "^3.7.1",
     "jquery-mousewheel": "^3.1.13",
     "limit-text-js": "^1.0.2",
     "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
     "millify": "^6.1.0",
-    "node-fetch": "2.6.1", 
+    "node-fetch": "^2.6.1",
     "node-gtts": "^2.0.2",
     "nodemon": "^3.0.1",
     "novita-sdk": "^3.1.0",
     "outlayer": "^2.1.1",
-    "qrcode": "^1.5.4",
+    "qrcode": "^1.4.4",
     "qs": "^6.11.2",
     "soundoftext-js": "^1.0.2",
     "ssl-express-www": "^3.0.7",
